--- a/Second_Manifest/index.html
+++ b/Second_Manifest/index.html
@@ -34,43 +34,20 @@
 							AI Fashion Platform
 						</h1>
 						<div class="first-screen__img-wrapper">
+							<!--
 							<picture>
 								<source
 									srcset="
 										assets/img/1-2x.png 1441w,
+										assets/img/1-mobile.png 320w,
+										assets/img/1-tablet.png 768w,
 										assets/img/1-1x.png    1440,
-										assets/img/1-tablet.png        768w,
-										assets/img/1-mobile.png 320w
 										"
 									sizes="
-										(max-width: 320px) 320px,
-										(max-width: 768px) 768px,
-										(min-width: 1441px) 1441px,
-										1440px"
-								/>
-								<img
-									class="first-screen__img"
-									src="assets/img/1-1x.png"
-									alt="image"
-								/>
-							</picture>
-							<!--
-							<picture>
-								<source
-									srcset="assets/img/1-2x.png"
-									media="(min-width: 1441px)"
-								/>
-								<source
-									srcset="assets/img/1-1x.png"
-									media="(max-width: 1440px)"
-								/>
-								<source
-									srcset="assets/img/1-tablet.png"
-									media="(max-width: 768px)"
-								/>
-								<source
-									srcset="assets/img/1-mobile.png"
-									media="(max-width: 320px)"
+										(min-width: 1441px) 1441w,
+										(max-width: 320px) 320w,
+										(max-width: 768px) 768w,
+										1440w"
 								/>
 								<img
 									class="first-screen__img"
@@ -79,6 +56,30 @@
 								/>
 							</picture>
 							-->
+							<picture>
+								<source
+									srcset="assets/img/1-2x.png"
+									media="(min-width: 1441px)"
+								/>
+								<source
+									srcset="assets/img/1-mobile.png"
+									media="(max-width: 320px)"
+								/>
+								<source
+									srcset="assets/img/1-tablet.png"
+									media="(max-width: 768px)"
+								/>
+								<source
+									srcset="assets/img/1-1x.png"
+									media="(max-width: 1440px)"
+								/>
+
+								<img
+									class="first-screen__img"
+									src="assets/img/1-1x.png"
+									alt="image"
+								/>
+							</picture>
 							<!--
 							<img
 								class="first-screen__img"
@@ -133,22 +134,48 @@
 						<div
 							class="site-section__img-wrapper site-section__img-wrapper--margin"
 						>
+							<picture>
+								<source
+									srcset="assets/img/2-2x.png"
+									media="(min-width: 1441px)"
+								/>
+								<source
+									srcset="assets/img/2-mobile.png"
+									media="(max-width: 320px)"
+								/>
+								<source
+									srcset="assets/img/2-tablet.png"
+									media="(max-width: 768px)"
+								/>
+								<source
+									srcset="assets/img/2-1x.png"
+									media="(max-width: 1440px)"
+								/>
+
+								<img
+									class="first-screen__img"
+									src="assets/img/2-1x.png"
+									alt="image"
+								/>
+							</picture>
+							<!--
 							<img
 								class="site-section__img"
 								srcset="
-							assets/img/2-2x.png 1441w,
-							assets/img/2-1x.png    1440,
-							assets/img/2-tablet.png        768w,
-                            assets/img/2-mobile.png 320w
-						"
+									assets/img/2-2x.png     1441w,
+									assets/img/2-mobile.png  320w,
+									assets/img/2-tablet.png  768w,
+									assets/img/2-1x.png     1440w
+								"
 								sizes="
-							(max-width: 320px) 320w,
-							(max-width: 768px) 768w,
-							(min-width: 1441px) 1441w,
-							1440w"
+									(min-width: 1441px) 1441w,
+									(max-width: 320px) 320w,
+									(max-width: 768px) 768w,
+									1440w"
 								src="assets/img/2-1x.png"
 								alt="image"
 							/>
+							-->
 						</div>
 						<p class="site-section__text">
 							Who is your user? Indicate her KEY personality
@@ -182,17 +209,18 @@
 									media="(min-width: 1441px)"
 								/>
 								<source
-									srcset="assets/img/3-1x.png"
-									media="(max-width: 1440px)"
+									srcset="assets/img/3-mobile.png"
+									media="(max-width: 320px)"
 								/>
 								<source
 									srcset="assets/img/3-tablet.png"
 									media="(max-width: 768px)"
 								/>
 								<source
-									srcset="assets/img/3-mobile.png"
-									media="(max-width: 320px)"
+									srcset="assets/img/3-1x.png"
+									media="(max-width: 1440px)"
 								/>
+
 								<img
 									class="first-screen__img"
 									src="assets/img/3-1x.png"
@@ -241,22 +269,48 @@
 						<div
 							class="site-section__img-wrapper site-section__img-wrapper--margin"
 						>
+							<picture>
+								<source
+									srcset="assets/img/4-2x.png"
+									media="(min-width: 1441px)"
+								/>
+								<source
+									srcset="assets/img/4-mobile.png"
+									media="(max-width: 320px)"
+								/>
+								<source
+									srcset="assets/img/4-tablet.png"
+									media="(max-width: 768px)"
+								/>
+								<source
+									srcset="assets/img/4-1x.png"
+									media="(max-width: 1440px)"
+								/>
+
+								<img
+									class="first-screen__img"
+									src="assets/img/4-1x.png"
+									alt="image"
+								/>
+							</picture>
+							<!--
 							<img
 								class="site-section__img"
 								srcset="
-							assets/img/4-2x.png 1441w,
-							assets/img/4-1x.png    1440,
-							assets/img/4-tablet.png        768w,
-                            assets/img/4-mobile.png 320w
-						"
+									assets/img/4-2x.png     1441w,
+									assets/img/4-mobile.png  320w,
+									assets/img/4-tablet.png  768w,
+									assets/img/4-1x.png     1440w
+								"
 								src="assets/img/2-1x.png"
 								sizes="
-							(max-width: 320px) 320w,
-							(max-width: 768px) 768w,
-							(min-width: 1441px) 1441w,
-							1440w"
+									(min-width: 1441px) 1441w,
+									(max-width: 320px) 320w,
+									(max-width: 768px) 768w,
+									1440w"
 								alt="image"
 							/>
+							-->
 						</div>
 						<p class="site-section__text">
 							I played with adding a wireframe of the website flow
