--- a/index.html
+++ b/index.html
@@ -183,6 +183,14 @@
 						>Homework_19 (Second_Manifest)</a
 					>
 				</li>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="Forms_2-0/"
+						target="_blank"
+						>Homework_20 (Forms_new_style)</a
+					>
+				</li>
 			</ul>
 		</main>
 	</body>
