--- a/index.html
+++ b/index.html
@@ -191,6 +191,14 @@
 						>Homework_20 (Forms_new_style)</a
 					>
 				</li>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="Navigation/"
+						target="_blank"
+						>Homework_21 (Navigation)</a
+					>
+				</li>
 			</ul>
 		</main>
 	</body>
