--- a/index.html
+++ b/index.html
@@ -199,6 +199,14 @@
 						>Homework_21 (Navigation)</a
 					>
 				</li>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="Solis__Project__1/"
+						target="_blank"
+						>Homework_22 (Project Solis)</a
+					>
+				</li>
 			</ul>
 		</main>
 	</body>
