--- a/Solis__Project__2/index.html
+++ b/Solis__Project__2/index.html
@@ -95,7 +95,12 @@
 	</head>
 
 	<body class="body">
-		<input type="checkbox" name="" id="" style="display: none;" />
+		<input
+			class="body-theme__input"
+			type="checkbox"
+			name="theme"
+			id="theme"
+		/>
 		<input
 			class="header__burger-switch"
 			type="checkbox"
@@ -120,8 +125,6 @@
 					/>
 					<img
 						class="body__background-img"
-						width="1440"
-						height="1028"
 						src="assets/img/light.png"
 						alt="background"
 					/>
@@ -143,8 +146,6 @@
 					/>
 					<img
 						class="body__background-img"
-						width="1440"
-						height="1028"
 						src="assets/img/dark.png"
 						alt="background"
 					/>
@@ -184,13 +185,13 @@
 							<a class="header__logo-wrapper" href="#">
 								<img
 									class="header__logo-img"
-									width="110"
-									height="32"
 									src="assets/img/logo.svg"
 									alt="logo"
 								/>
 							</a>
-
+							<label class="header__theme" for="theme"
+								>theme</label
+							>
 							<label class="header__burger-menu" for="menu-switch"
 								>menu
 							</label>
@@ -261,8 +262,6 @@
 									/>
 									<img
 										class="info__img"
-										width="570"
-										height="670"
 										src="assets/img/statistic.png"
 										alt="background"
 									/>
@@ -409,8 +408,6 @@
 									/>
 									<img
 										class="quote__img"
-										width="1170"
-										height="400"
 										src="assets/img/quote.png"
 										alt="background"
 									/>
@@ -458,8 +455,6 @@
 											/>
 											<img
 												class="video__content-img"
-												width="870"
-												height="539"
 												src="assets/img/screensaver.png"
 												alt="background"
 											/>
@@ -494,8 +489,6 @@
 									/>
 									<img
 										class="promises__img"
-										width="600"
-										height="540"
 										src="assets/img/promises.png"
 										alt="background"
 									/>
@@ -569,8 +562,6 @@
 											/>
 											<img
 												class="reviews__item-img"
-												width="370"
-												height="340"
 												src="assets/img/client-1.jpg"
 												alt="background"
 											/>
@@ -605,8 +596,6 @@
 											/>
 											<img
 												class="reviews__item-img"
-												width="370"
-												height="340"
 												src="assets/img/client-2.jpg"
 												alt="background"
 											/>
@@ -640,8 +629,6 @@
 											/>
 											<img
 												class="reviews__item-img"
-												width="370"
-												height="340"
 												src="assets/img/client-3.jpg"
 												alt="background"
 											/>
