--- a/index.html
+++ b/index.html
@@ -207,6 +207,14 @@
 						>Homework_22 (Project Solis)</a
 					>
 				</li>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="Pricing/"
+						target="_blank"
+						>Homework_23 (Pricing)</a
+					>
+				</li>
 			</ul>
 		</main>
 	</body>
