--- a/Solis__Project__1/index.html
+++ b/Solis__Project__1/index.html
@@ -95,7 +95,12 @@
 	</head>
 
 	<body class="body">
-		<input type="checkbox" name="" id="" style="display: none;" />
+		<input
+			class="body-theme__input"
+			type="checkbox"
+			name="theme"
+			id="theme"
+		/>
 		<input
 			class="header__burger-switch"
 			type="checkbox"
@@ -120,6 +125,8 @@
 					/>
 					<img
 						class="body__background-img"
+						width="1440"
+						height="1024"
 						src="assets/img/light.png"
 						alt="background"
 					/>
@@ -141,6 +148,8 @@
 					/>
 					<img
 						class="body__background-img"
+						width="1440"
+						height="1024"
 						src="assets/img/dark.png"
 						alt="background"
 					/>
@@ -184,6 +193,10 @@
 									alt="logo"
 								/>
 							</a>
+
+							<label class="header__theme" for="theme"
+								>theme</label
+							>
 
 							<label class="header__burger-menu" for="menu-switch"
 								>menu
@@ -255,6 +268,8 @@
 									/>
 									<img
 										class="info__img"
+										width="570"
+										height="670"
 										src="assets/img/statistic.png"
 										alt="background"
 									/>
@@ -401,6 +416,8 @@
 									/>
 									<img
 										class="quote__img"
+										width="1170"
+										height="400"
 										src="assets/img/quote.png"
 										alt="background"
 									/>
@@ -448,6 +465,8 @@
 											/>
 											<img
 												class="video__content-img"
+												width="870"
+												height="539"
 												src="assets/img/screensaver.png"
 												alt="background"
 											/>
@@ -482,6 +501,8 @@
 									/>
 									<img
 										class="promises__img"
+										width="600"
+										height="540"
 										src="assets/img/promises.png"
 										alt="background"
 									/>
@@ -555,6 +576,8 @@
 											/>
 											<img
 												class="reviews__item-img"
+												width="370"
+												height="340"
 												src="assets/img/client-1.jpg"
 												alt="background"
 											/>
@@ -589,6 +612,8 @@
 											/>
 											<img
 												class="reviews__item-img"
+												width="370"
+												height="340"
 												src="assets/img/client-2.jpg"
 												alt="background"
 											/>
@@ -622,6 +647,8 @@
 											/>
 											<img
 												class="reviews__item-img"
+												width="370"
+												height="340"
 												src="assets/img/client-3.jpg"
 												alt="background"
 											/>
