--- a/Solis__Project__1/index.html
+++ b/Solis__Project__1/index.html
@@ -189,6 +189,8 @@
 							<a class="header__logo-wrapper" href="#">
 								<img
 									class="header__logo-img"
+									width="108"
+									height="32"
 									src="assets/img/logo.svg"
 									alt="logo"
 								/>
