--- a/index.html
+++ b/index.html
@@ -215,6 +215,14 @@
 						>Homework_23 (Pricing)</a
 					>
 				</li>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="Photoshop/"
+						target="_blank"
+						>Homework_24 (Photoshop)</a
+					>
+				</li>
 			</ul>
 		</main>
 	</body>
