all homework done

--- a/index.html
+++ b/index.html
@@ -223,6 +223,14 @@
 						>Homework_24 (Photoshop)</a
 					>
 				</li>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="Productly__new/"
+						target="_blank"
+						>Homework_25 (Productly__full_scss)</a
+					>
+				</li>
 			</ul>
 		</main>
 	</body>
